[package]
name = "cyphers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.21", features = ["derive"] }
deunicode = "1.3.3"
enum_dispatch = "0.3.12"
rand = "0.8.5"
